--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Elena Brazhnik</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+       crossorigin="anonymous" />
 </head>
 <body>
 <!--main container-->
@@ -68,14 +71,23 @@
          <!--about me main info-->
            <div class="info-container">
             <h2 class="profession">Soprano</h2>
-            <h1 class="name">Elena Brazhnyk</h1>
+            <h1 class="name">Elena Brazhnik</h1>
 
-             <p class="description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+             <p class="description"> Ukrainian soprano ELENA BRAZHNYK graduated with excellence from  the ‘National University of Culture and Arts’ (2007 A.
+            Marhlevsky, N. Krechko) and ‘National Tschaikowsky Music Academy’ in Kiev, Ukraine (2012 E. Miroshnychenko, I.
+            Semenenko). During her studies, she debuted in part Marfa from ‘Tsar’s Bride’, Rimski-Korsakov. In 2013 Elena Brazhnyk
+            has participated in the master class of Vilma Vernocchi, Italy.  She is finalist of the International Singing
+            Competition ‘Klaudia Taev’ Estonia (2015).
+            From 2016 Elena Brazhnyk debuted in the Estonian National Opera and performed the leading role of Gilda (Verdi’s
+            “Rigoletto”), Violetta Valery (Verdi’s “La Traviata”), Micaela (Bizet’s “Carmen”), La Contessa (Mozart “Le Nozze di
+            Figaro”) Soprano part in Beethoven’s Mass in C-Dur. In 2019 Elena Brazhnyk performed the leading role of Marfa
+            Rimsky-Korsakov’s “The Tsar’s Bride” in the new production of the Director Juriy Aleksandrov (St. Petersburg).
+</p>
            </div>
 
      <!--projects container-->
         <div class="projects-container" >
-          <h3 class="about-me-title">projects</h3>
+          <h3 class="about-me-title">Video</h3>
           <ol>
            <li class="projects-item" > 
 
