--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
                <h3 class="contacts-titl">Contacts</h3>
                <div>
-                  <span class="contacts-titl-type"> C: </span>
+                  <!-- <span class="contacts-titl-type"> C: </span>
 
-                  <a class="contacts-link" href="tel:37258460908"> +372 58 46 09 08 </a>
+                  <a class="contacts-link" href="tel:37258460908"> +372 58 46 09 08 </a> -->
                </div>
 
                <div>
@@ -37,20 +37,29 @@
 
             </div>
             <!-- tech skills container -->
-            <!-- <div class="tech-skills-container">
+            <div class="tech-skills-container">
 
-               <h3 class="tech-skils-titl">Tech Skills</h3>
+               <h3 class="tech-skils-titl">Opera Roles</h3>
                <ul>
-                  <li class="tech-skills-item"> <span class="tech-skills-text"> HTML5 </span> </li>
-                  <li class="tech-skills-item"> <span class="tech-skills-text"> CSS3 </span> </li>
-                  <li class="tech-skills-item"> <span class="tech-skills-text"> GIT </span> </li>
-                  <li class="tech-skills-item"> <span class="tech-skills-text"> WebPack </span> </li>
-                  <li class="tech-skills-item"> <span class="tech-skills-text"> JavaScript </span> </li>
+                  <li class="tech-skills-item"> <span class="tech-skills-text"> Gilda
+                  (Verdi’s
+                  “Rigoletto”) </span> </li>
+                  <li class="tech-skills-item"> <span class="tech-skills-text"> Violetta Valery (Verdi’s “La Traviata”) </span> </li>
+                  <li class="tech-skills-item"> <span class="tech-skills-text"> Micaela (Bizet’s “Carmen”) </span> </li>
+                  <li class="tech-skills-item"> <span class="tech-skills-text"> La Contessa (Mozart
+                  “Le Nozze di
+                  Figaro”) </span> </li>
+                  <li class="tech-skills-item"> <span class="tech-skills-text"> Marfa
+                     (Rimsky-Korsakov’s “The Tsar’s Bride”) </span> </li>
+                  <li class="tech-skills-item"> <span class="tech-skills-text"> Linda 
+                        (Donizetti "Linda di Chamounix") </span> </li>
+
+                  <!-- <li class="tech-skills-item"> <span class="tech-skills-text"> JavaScript </span> </li>
                   <li class="tech-skills-item"> <span class="tech-skills-text"> React.js </span> </li>
-                  <li class="tech-skills-item"> <span class="tech-skills-text"> Node.js </span> </li>
+                  <li class="tech-skills-item"> <span class="tech-skills-text"> Node.js </span> </li> -->
 
                </ul>
-            </div> -->
+            </div>
             <!--soft skils container-->
 
             <!-- <div class="soft-skils-container">
@@ -250,8 +259,6 @@
    </div>
    </div> -->
 
-   <!-- <br><span class="j51_nsx">A <a href="http://www.joomla51.com">Joomla Template</a> by
-      Joomla51.com</span> -->
 
 <div id="copyright">
    <p>(c) 2018 ElenaBrazhnyk</p>
