--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Elena Brazhnik</title>
+   <!-- <link rel="stylesheet" type="text/css" href="sim-slider-styles.css"> -->
    <link rel="stylesheet" href="./css/style.css">
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -53,6 +54,8 @@
                      (Rimsky-Korsakov’s “The Tsar’s Bride”) </span> </li>
                   <li class="tech-skills-item"> <span class="tech-skills-text"> Linda 
                         (Donizetti "Linda di Chamounix") </span> </li>
+                        <li class="tech-skills-item"> <span class="tech-skills-text"> Pamina 
+                           (Mozart "The Magic Flute") </span> </li>
 
                   <!-- <li class="tech-skills-item"> <span class="tech-skills-text"> JavaScript </span> </li>
                   <li class="tech-skills-item"> <span class="tech-skills-text"> React.js </span> </li>
@@ -152,14 +155,14 @@
                   </tr>
                   <tr style="height: 54px;">
                      <td style="width: 373.6px; height: 54px; text-align: center;">
-                        <h4>Elena Brazhnyk, Riina Pikani</h4>
+                        <h4>Elena Brazhnyk</h4>
                         <h4>Donizetti "Linda di Chamounix"</h4>
                      </td>
                   </tr>
                   <tr style="height: 14px;">
                      <td style="width: 373.6px; height: 14px;">
-                        <div class="video-responsive"><iframe id="youtube_u82a2KqzYmE" width="425" height="344" frameborder="0"
-                              src="https://www.youtube.com/embed/u82a2KqzYmE?wmode=transparent" allowfullscreen=""></iframe>
+                        <div class="video-responsive"><iframe id="youtube_S7U1dbYc_Cc" width="425" height="344" frameborder="0"
+                              src="//www.youtube.com/embed/S7U1dbYc_Cc" allowfullscreen=""></iframe>
                         </div>
                      </td>
                   </tr>
@@ -183,6 +186,22 @@
             </table>
             <p>&nbsp;</p>
          </div>
+
+         <div class="sim-slider">
+            <ul class="sim-slider-list">
+                <li><img src="http://pvbk.spb.ru/inc/slider/imgs/no-image.gif" alt="screen"></li>    <!-- это экран -->
+                <!-- <li class="sim-slider-element"><img src="./img/Elena-1.jpg" alt="1"></li> -->
+                <li class="sim-slider-element"><img src="./img/Elena-9.jpg" alt="9"></li>
+                <li class="sim-slider-element"><img src="./img/Elena-3.jpg" alt="3"></li>
+                <!-- <li class="sim-slider-element"><img src="./img/Elena-4.jpg" alt="4"></li> -->
+                <li class="sim-slider-element"><img src="./img/Elena-7.jpg" alt="7"></li>
+                <li class="sim-slider-element"><img src="./img/Elena-8.jpg" alt="8"></li>
+                <!-- <li class="sim-slider-element"><img src="imgN.jpg" alt="N"></li> -->
+            </ul>
+            <div class="sim-slider-arrow-left"></div>
+            <div class="sim-slider-arrow-right"></div>
+            <div class="sim-slider-dots"></div>
+        </div>
 
          <!--work experience-->
          <!-- <div>
@@ -264,6 +283,11 @@
    <p>(c) 2018 ElenaBrazhnyk</p>
 </div>
 <div class="clear"></div>
+
+<!-- подключение слайдера -->
+<script src="js/sim-slider.js" type="module"></script>
+<!-- вызов слайдера -->
+<!-- <script>new Sim()</script> -->
 </body>
 
 </html>
