--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                   </tr>
                   <tr style="height: 14px;">
                      <td style="width: 373.6px; height: 14px;">
-                        <div class="video-responsive"><iframe id="youtube_S7U1dbYc_Cc" width="425" height="344" frameborder="0"
-                              src="//www.youtube.com/embed/S7U1dbYc_Cc" allowfullscreen=""></iframe>
+                        <div class="video-responsive"><iframe id="youtube_R0Ijpt-b1rI" width="425" height="344" frameborder="0"
+                              src="https://www.youtube.com/embed/R0Ijpt-b1rI?=transparent" allowfullscreen=""></iframe>
                         </div>
                      </td>
                   </tr>
